# cangjie_test

./: .gitignore  OAT.xml  README.md  README_zh.md
.gitcode/:  CODEOWNERS  CODEOWNERS
.gitcode/PULL_REQUEST_TEMPLATE/: PULL_REQUEST_TEMPLATE.md  PULL_REQUEST_TEMPLATE_chinese.md
Conformance/CJMP/RefGlueCode/_common/: interoptest.cj
Conformance/CJMP/RefGlueCode/objc-uses-cj/: run.sh
Conformance/Compiler/harness/: README.md  README_zh.md  base-settings.json  excluded.lst  harness.py  included.lst  report.py  run_diff.py
Conformance/Compiler/harness/core/: config.py  config_manager.py  driver_list.py  driver_manager.py  report_manager.py  task_manager.py
Conformance/Compiler/harness/diff/: html_diff.py  plain_text_diff.py
Conformance/Compiler/harness/reporter/: html_reporter.py  junit_reporter.py  plain_text_reporter.py  tree_view.py
Conformance/Compiler/harness/tdm/: README.md  README_zh.md  accept.py  plot_gantt.py  plot_mem_usage.py
Conformance/Compiler/harness/tests/: config_tests.py  driver_tests.py  simple_py_runner_tests.py  test_tests.py  utils_tests.py
Conformance/Compiler/harness/utils/: utils.py  version.py  win_killpg.py
testsuites/HLT/: testlist
testsuites/HLT/API/actors/: test_actors.cj  (+3 more)
testsuites/HLT/compiler/cjnative/Chir/CompileOption/plugin/runplugin/plugin2/: CMakeLists.txt  runplugin.cj
testsuites/HLT/compiler/cjnative/Chir/CompileOption/plugin/runplugin/plugin2/src/: plugin2.cpp
testsuites/HLT/regression/: c_def.c  open_class_generic.cj  runtime_const.cj  testcase_0.cj  testcase_1.cj  testcase_10.cj  testcase_101.cj  testcase_102.cj  testcase_103.cj  testcase_104.cj  testcase_105.cj  testcase_106.cj  testcase_108.cj  testcase_109.cj  testcase_11.cj  testcase_111.cj  testcase_112.cj  testcase_113.cj  testcase_115.cj  testcase_116.cj  testcase_118.cj  testcase_119.cj  testcase_12.cj  testcase_121.cj  testcase_122.cj  testcase_123.cj  testcase_124.cj  testcase_126.cj  testcase_127.cj  testcase_130.cj  testcase_131.cj  testcase_132.cj  testcase_133.cj  testcase_135.cj  testcase_136.cj  testcase_138.cj  testcase_139.cj  testcase_14.cj  testcase_140.cj  testcase_141.cj  (+541 more)
testsuites/LLT/: cjmp_testlist_linux_gnustep  cjnative_testlist  cjnative_testlist_darwin_aarch64  cjnative_testlist_win
testsuites/LLT/compiler/Plugins/IRCheck/NotFoundError/src/: CMakeLists.txt  MyPlugin1.cpp
(+139315 files in other folders)
